Update with new author format

--- a/_posts/2017-09-12-session-1.md
+++ b/_posts/2017-09-12-session-1.md
@@ -9,9 +9,11 @@ talks:
   start: "8:00"
   end: "9:00"
 - title: "First Talk"
-  speaker: "Bilbo Baggins"
-  url: "http://bilbobaggins.com"
-  institute: "University of Middle Earth"
+  author:
+  - family: Baggins
+    given: Bilbo
+    url: "http://bilbobaggins.com"
+    institute: "University of Middle Earth"
   abstract: "In this talk I'll give a short presentation on hairy feet. The main assumed knowledge will be powerful rings and loyal sidekicks."
   start: "9:00"
   end: "10:30"
@@ -21,8 +23,9 @@ talks:
 - title: TBA
   start: "11:00"
   end: "12:30"
-  speaker: "Gandalf"
-  institute: "University of Middle Earth"
+  author:
+  - family: "Gandalf"
+    institute: "University of Middle Earth"
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
