--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -1,6 +1,6 @@
 ---
 title:  "Causal Inference meets Probabilistic Models"
-layout: multitrack
+layout: singletrack
 tagline: "Workshop"
 show_abstracts: true
 room: "PLB-DS05, Pam Liversidge Building"
@@ -24,7 +24,7 @@ talks:
   - family: 
     given: 
     url: 
-    institute: Aalto University
+    institute:
   start: "9:10"
   end: "10:00"
 - title: "Coffee Break"
