--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -1,6 +1,6 @@
 ---
 title:  "Causal Inference meets Probabilistic Models"
-layout: singletrack
+layout: multitrack
 tagline: "Workshop"
 show_abstracts: true
 room: "PLB-DS05, Pam Liversidge Building"
