--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -3,7 +3,7 @@ title: "Day 1 | "
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: Pam Liversidge Building, PLB-E05
+room: TBA
 talks:
 - title: "Arrivals"
   start: "8:30"
