--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -3,7 +3,7 @@ title: "Day 3 |"
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: Pam Liversidge Building, PLB-E05
+room: TBA
 talks:
 - title: "Arrivals"
   start: "8:30"
@@ -14,7 +14,7 @@ talks:
   - family: Ek
     given: Carl Henrik
     url: "http://carlhenrik.com/"
-    institute: "University of Bristol"
+    institute: "University of Cambridge"
   start: "9:00"
   end: "10:30"
 - title: "Coffee Break"
@@ -26,7 +26,7 @@ talks:
   - family: González
     given: Javier
     url: "http://javiergonzalezh.github.io/"
-    institute: "Amazon Research Cambridge"
+    institute: "Microsoft Research Cambridge"
   start: "11:00"
   end: "12:30"
 - title: "Lunch"
