--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -3,7 +3,7 @@ title:  "Causal Inference meets Probabilistic Models"
 layout: multitrack
 tagline: "Workshop"
 show_abstracts: true
-room: "PLB-DS05, Pam Liversidge Building"
+room: TBA
 talks:
 - title: "Arrivals"
   start: "8:30"
@@ -78,7 +78,7 @@ talks:
   - family: Gonzalez
     given: Javier
     url: "http://javiergonzalezh.github.io/"
-    institute: "Amazon Research Cambridge"
+    institute: "Microsoft Research Cambridge"
   start: "16:00"
   end: "17:00"
 ---
