--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -3,7 +3,7 @@ title: "Day 2 |"
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: Pam Liversidge Building, PLB-E05
+room: TBA
 talks:
 - title: "Arrivals"
   start: "8:30"
