--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -21,15 +21,15 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "A second introduction to GPs"
+- title: "Kernel design"
   start: "11:00"
   end: "12:30"
   youtube: 
   author:
-  - family: Wilson
-    given: Andrew Gordon
-    institute: "Courant Institute of Mathematical Sciences and Center for Data Science, New York University"
-    url: "https://cims.nyu.edu/~andrewgw/"
+  - family: Durrande
+    given: Nicolas
+    institute: "PROWLER.io"
+    url: "https://sites.google.com/site/nicolasdurrandehomepage/"
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
@@ -41,14 +41,14 @@ talks:
 - title: "Coffee Break"
   start: "15:30"
   end: "16:00"
-- title: "Kernel design"
+- title: "TBA"
   abstract:
   youtube: 
   author:
-  - family: Durrande
-    given: Nicolas
-    url: "https://sites.google.com/site/nicolasdurrandehomepage/"
-    institute: "PROWLER.io"
+  - family: Wilson
+    given: Andrew Gordon
+    url: "https://cims.nyu.edu/~andrewgw/"
+    institute: "Courant Institute of Mathematical Sciences and Center for Data Science, New York University"
   start: "16:00"
   end: "17:00"
 ---
