changes to day 3 and workshop

--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -18,17 +18,17 @@ talks:
   start: "9:00"
   end: "9:10"
   youtube:
-- title: "Introduction to Causal Inference"
+- title: "TBA"
   abstract: 
-  author:
-  - family: 
-    given: 
-    url: 
-    institute: 
+  author: 
+  - family: Silva
+    given: Ricardo
+    url: "http://www.homepages.ucl.ac.uk/~ucgtrbd/"
+    institute: University College London
   start: "9:10"
   end: "10:00"
 - title: "Coffee Break"
-  start: "10:00"
+  start: "10:10"
   end: "10:30"    
 - title: "TBA"
   abstract: 
