--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -40,7 +40,7 @@ talks:
 - title: "Coffee Break"
   start: "15:30"
   end: "16:00"
-- title: "TBA"
+- title: "Bayesian Neural Networks from a Gaussian Process Perspective"
   abstract:
   author:
   - family: Wilson
