--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -53,11 +53,11 @@ talks:
   end: "13:30"
 - title: "TBA"
   abstract: 
-  author:
-  - family:  
-    given: 
-    url: 
-    institute: 
+  author: 
+  - family: Kilbertus
+    given: Niki
+    url: "https://sites.google.com/view/nikikilbertus"
+    institute: "University of Cambridge and Department of Empirical Inference, MPI-IS"
   start: "13:30"
   end: "14:30"
 - title: "TBA"
