--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -3,12 +3,12 @@ title: "Day 1 | "
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: TBA
+room: Zoom 
 talks:
 - title: "Arrivals"
   start: "8:30"
   end: "9:00"
-- title: "A first introduction to GPs"
+- title: "An introduction to GPs"
   author:
   - family: Wilkinson
     given: Richard
@@ -33,7 +33,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab Session 1"
+- title: "Lab session 1 and roundtables with the speakers"
   speaker: "[notebook]"
   url:
   start: "13:45"
