--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -3,7 +3,7 @@ title: "Day 2 |"
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: TBA
+room: Zoom
 talks:
 - title: "Arrivals"
   start: "8:30"
@@ -33,7 +33,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab Session 2"
+- title: "Lab session 2 and roundtables with the speakers"
   speaker: "[notebook]"
   url:
   start: "13:45"
