--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -3,7 +3,7 @@ title: "Day 3 |"
 layout: singletrack
 tagline: "Summer School"
 show_abstracts: true
-room: TBA
+room: Zoom
 talks:
 - title: "Arrivals"
   start: "8:30"
@@ -32,7 +32,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab Session 3"
+- title: "Lab session 3 and roundtables with the speakers"
   speaker: "[notebook]"
   url:
   start: "13:45"
