minor changes program

--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -33,7 +33,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab session 1 and round tables with the speakers"
+- title: "Lab session 1 and round tables with the speakers (Prof. Richard Wilkinson and Dr. Nicolas Durrande)"
   speaker: "[notebook]"
   url:
   start: "13:45"
