--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -33,7 +33,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab session 2 and round tables with the speakers"
+- title: "Lab session 2 and round tables with the speakers (Dr. Zhenwen Dai and Dr. Carl Henrik Ek)"
   speaker: "[notebook]"
   url:
   start: "13:45"
@@ -41,7 +41,7 @@ talks:
 - title: "Coffee Break"
   start: "15:30"
   end: "16:00"
-- title: "TBA"
+- title: " Multi-task Gaussian process modelling for point process data"
   abstract:
   author:
   - family: Aglietti
