--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -32,7 +32,7 @@ talks:
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
-- title: "Lab session 3 and round tables with the speakers"
+- title: "Lab session 3 and round tables with the speakers (Dr. Carl Henrik Ek and Dr. Javier González)"
   speaker: "[notebook]"
   url:
   start: "13:45"
