--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -13,7 +13,7 @@ talks:
   - family: Wilkinson
     given: Richard
     url: "https://rich-d-wilkinson.github.io/"
-    institute: "The University of Sheffield"   
+    institute: "The University of Nottingham"   
     abstract:
   start: "9:00"
   end: "10:30"
