minor changes program

--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -43,7 +43,7 @@ talks:
   author:
   - family: van der Schaar
     given: Mihaela
-    url: "www.vanderschaar-lab.com"
+    url: "https://www.vanderschaar-lab.com"
     institute: University of Cambridge and The Alan Turing Institute   
   start: "11:20"
   end: "12:10"
