changes to program

--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -21,12 +21,12 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "Introduction to Deep GPs"
+- title: "Unsupervised learning and introduction to deep GPs"
   abstract:
   author:
-  - family: Lawrence
-    given: Neil
-    url: "http://inverseprobability.com"
+  - family: Ek
+    given: Carl Henrik
+    url: "http://carlhenrik.com/"
     institute: "University of Cambridge"
   start: "11:00"
   end: "12:30"
