--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -8,14 +8,14 @@ talks:
 - title: "Arrivals"
   start: "8:30"
   end: "9:00"
-- title: "Unsupervised learning and Deep GPs"
+- title: "Deep GPs"
   abstract:
   author:
-  - family: Ek
-    given: Carl Henrik
-    url: "http://carlhenrik.com/"
+  - family: Lawrence
+    given: Neil
+    url: "http://inverseprobability.com"
     institute: "University of Cambridge"
-  start: "9:00"
+  start: "09:00"
   end: "10:30"
 - title: "Coffee Break"
   start: "10:30"
