minor change to one title

--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -21,7 +21,7 @@ talks:
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
-- title: "Unsupervised learning and introduction to deep GPs"
+- title: "Unsupervised learning and Composite GPs"
   abstract:
   author:
   - family: Ek
