minor change day 1

--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -41,7 +41,7 @@ talks:
 - title: "Coffee Break"
   start: "15:30"
   end: "16:00"
-- title: "TBA"
+- title: "Representation Learning with Gaussian Processes"
   abstract:
   youtube: 
   author:
