--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -17,7 +17,7 @@ talks:
   start: "9:00"
   end: "9:10"
   youtube:
-- title: "TBA"
+- title: "Causal Inference: An Overview and the Role of Probabilistic Modelling"
   abstract: 
   author: 
   - family: Silva
@@ -39,7 +39,7 @@ talks:
   start: "10:30"
   end: "11:20"
 - title: "TBA"
-  abstract: 
+  abstract: Machine learning has been playing a role in causal inference for decades, but lately more and more of the machine learning community is realising its importance. In this talk, I’ll provide a short tutorial on the field, from representation to learning, hopefully motivating new researchers to join the fray and contribute with innovative ideas from a variety of backgrounds. In particular, we will revisit the use of probabilistic modelling, meaning likelihood-based methods and Bayesian inference in particular, on answering causal questions. Probabilistic modelling provides its own advantages and challenges compared to more direct approaches, and it is good to be aware of some of the issues.
   author:
   - family: van der Schaar
     given: Mihaela
