--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -17,6 +17,7 @@ talks:
     abstract:
   start: "9:00"
   end: "10:30"
+  slides: "Wilkinson2020.pdf"
   youtube: 
 - title: "Coffee Break"
   start: "10:30"
