--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -25,6 +25,7 @@ talks:
 - title: "Kernel design"
   start: "11:00"
   end: "12:30"
+  slides: "Durrande2020.pdf"
   youtube: 
   author:
   - family: Durrande
