--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -18,7 +18,7 @@ talks:
   start: "9:00"
   end: "10:30"
   slides: "Wilkinson2020.pdf"
-  youtube: 
+  youtube: https://www.youtube.com/watch?v=GWHE5vnpxks
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
@@ -26,7 +26,7 @@ talks:
   start: "11:00"
   end: "12:30"
   slides: "Durrande2020.pdf"
-  youtube: 
+  youtube: https://www.youtube.com/watch?v=dkd9mQDkwOo
   author:
   - family: Durrande
     given: Nicolas
@@ -45,7 +45,6 @@ talks:
   end: "16:00"
 - title: "Representation Learning with Gaussian Processes"
   abstract:
-  youtube: 
   author:
   - family: Wilson
     given: Andrew Gordon
@@ -54,4 +53,5 @@ talks:
   start: "16:00"
   end: "17:00"
   slides: "Wilson2020_part1.pdf"
+  youtube: https://www.youtube.com/watch?v=jq8A4keABx4
 ---
