--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -18,7 +18,7 @@ talks:
   start: "9:00"
   end: "10:30"
   slides: "Wilkinson2020.pdf"
-  youtube: https://www.youtube.com/watch?v=GWHE5vnpxks
+  youtube: https://www.youtube.com/watch?v=GWHE5vnpxks&t=229s
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
