--- a/_posts/2020-09-14-day-1.md
+++ b/_posts/2020-09-14-day-1.md
@@ -26,7 +26,7 @@ talks:
   start: "11:00"
   end: "12:30"
   slides: "Durrande2020.pdf"
-  youtube: https://www.youtube.com/watch?v=dkd9mQDkwOo&list=PLZ_xn3EIbxZHynuWRdYp4WDtpKm5Xo9Ge
+  youtube: https://youtu.be/dkd9mQDkwOo
   author:
   - family: Durrande
     given: Nicolas
