--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -18,6 +18,7 @@ talks:
     youtube: 
   start: "9:00"
   end: "10:30"
+  slides: "Dai2020.pdf"
 - title: "Coffee Break"
   start: "10:30"
   end: "11:00"
