--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -25,6 +25,7 @@ talks:
 - title: "Unsupervised learning and Composite GPs"
   abstract:
   author:
+  slides: "Ek2020.pdf"
   - family: Ek
     given: Carl Henrik
     url: "http://carlhenrik.com/"
