--- a/_posts/2020-09-15-day-2.md
+++ b/_posts/2020-09-15-day-2.md
@@ -31,6 +31,7 @@ talks:
     institute: "University of Cambridge"
   start: "11:00"
   end: "12:30"
+  slides: "Ek2020.pdf"
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
