--- a/_posts/2020-09-17-day-4.md
+++ b/_posts/2020-09-17-day-4.md
@@ -1,7 +1,7 @@
 ---
-title:  "Workshop"
+title:  "Workshop |"
 layout: singletrack
-tagline: ""
+tagline: "Causal Inference meets Probabilistic Models"
 talks:
 - title: "Arrivals"
   start: "8:30"
