--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -30,7 +30,7 @@ talks:
 - title: "Coffee Break"
   start: "10:00"
   end: "10:30"    
-- title: Causal discovery: methodology, evaluation and application
+- title: "Causal discovery: methodology, evaluation and application"
   abstract: Causal discovery is crucial for many real-world applications, especially in the situation, with only observational data. This talk will first provide a short overview of causal discovery methods, including score-based methods, constrain-based methods, and functional causal models. I will present an instance of a constraint-based causal discovery method in the presence of missing data. Secondly, I will discuss the challenge of causal discovery evaluation and how to utilize synthetic data for causal discovery evaluation. In the end, I will present a causal view on the robustness of neural networks where the causal relationship can be used to improve the robustness of neural networks.
   author:
   - family: Zhang
@@ -51,7 +51,7 @@ talks:
 - title: "Lunch"
   start: "12:10"
   end: "13:10"
-- title: A class of algorithms for general instrumental variable models
+- title: "A class of algorithms for general instrumental variable models"
   abstract: We will start with a general motivation for cause-effect estimation and describe common challenges such as identifiability. Next, we take a closer look at the instrumental variable setting and how an instrument can aid identification. While most approaches to achieve identifiability require one-size-fits-all assumptions such as an additive error model for the outcome, we will present a framework for partial identification, which provides lower and upper bounds on the causal treatment effect. The approach leverages advances in gradient-based optimization for the non-convex objective and works in the most general case, where instrument, treatment and outcome are continuous. Finally, we demonstrate on a set of synthetic and real-world data that our bounds capture the causal effect when additive methods fail, providing a useful range of answers compatible with observation as opposed to relying on unwarranted structural assumptions.
   author: 
   - family: Kilbertus
@@ -60,7 +60,7 @@ talks:
     institute: "University of Cambridge and Department of Empirical Inference, MPI-IS"
   start: "13:10"
   end: "14:00"
-- title: Causal decision-making meets Gaussian Processes
+- title: "Causal decision-making meets Gaussian Processes"
   abstract: Solving decision making problems in a variety of domains such as healthcare or operations research requires experimentation. By performing interventions one can understand how a system behaves when an action is taken and thus infer the cause-effect relationships of a phenomenon. Experiments are usually expensive, time-consuming, and may present ethical issues. Therefore, researchers generally have to trade-off cost, time, and other practical considerations to decide which experiments to conduct in order to learn about a system. In this talk I will present two methodologies that, by linking causal inference, experimental design and Gaussian process (GP) modelling, allow to efficiently learn the causal effects in a graph and identify the optimal intervention to perform. Firstly, I will show how to construct a multi-task causal GP model, the DAG-GP model, which captures the non-trivial correlation structure across different experimental outputs. By sharing experimental information, the DAG-GP model accurately estimates the causal effects in a variety of experimental settings while enabling proper uncertainty quantification. I will then demonstrate how this model, and more generally GP models, can be used within decision-making algorithm to choose experiments to perform. Particularly, I will introduce the Causal Bayesian Optimization algorithm and I will show how incorporating the knowledge of the causal graph in Bayesian Optimization improves the ability to reason about optimal decision making while decreasing the optimization cost and avoiding suboptimal solutions. 
   author: 
   - family: Aglietti
@@ -81,5 +81,5 @@ talks:
     url: "http://javiergonzalezh.github.io/"
     institute: "Microsoft Research Cambridge"
   start: "15:20"
-  end: "14:00"
+  end: "16:00"
 ---
