--- a/_posts/2020-09-16-day-3.md
+++ b/_posts/2020-09-16-day-3.md
@@ -29,6 +29,7 @@ talks:
     institute: "Microsoft Research Cambridge"
   start: "11:00"
   end: "12:30"
+  slides: "Gonzalez2020.pdf"
 - title: "Lunch"
   start: "12:30"
   end: "13:45"
