--- a/_posts/2020-09-17-workshop.md
+++ b/_posts/2020-09-17-workshop.md
@@ -61,6 +61,7 @@ talks:
     institute: "University of Cambridge and Department of Empirical Inference, MPI-IS"
   start: "13:10"
   end: "14:00"
+  slides:
 - title: "Causal decision-making meets Gaussian Processes"
   abstract: Solving decision making problems in a variety of domains such as healthcare or operations research requires experimentation. By performing interventions one can understand how a system behaves when an action is taken and thus infer the cause-effect relationships of a phenomenon. Experiments are usually expensive, time-consuming, and may present ethical issues. Therefore, researchers generally have to trade-off cost, time, and other practical considerations to decide which experiments to conduct in order to learn about a system. In this talk I will present two methodologies that, by linking causal inference, experimental design and Gaussian process (GP) modelling, allow to efficiently learn the causal effects in a graph and identify the optimal intervention to perform. Firstly, I will show how to construct a multi-task causal GP model, the DAG-GP model, which captures the non-trivial correlation structure across different experimental outputs. By sharing experimental information, the DAG-GP model accurately estimates the causal effects in a variety of experimental settings while enabling proper uncertainty quantification. I will then demonstrate how this model, and more generally GP models, can be used within decision-making algorithm to choose experiments to perform. Particularly, I will introduce the Causal Bayesian Optimization algorithm and I will show how incorporating the knowledge of the causal graph in Bayesian Optimization improves the ability to reason about optimal decision making while decreasing the optimization cost and avoiding suboptimal solutions. 
   author: 
@@ -71,7 +72,7 @@ talks:
   start: "14:00"
   end: "14:50"
   youtube: 
-  slides: 
+  slides: "Aglietti2020_part2.pdf"
 - title: "Tea Break"
   start: "14:50"
   end: "15:00"
